# ArchivumDocs

./: .archivum.yml  .clang-format  .gitignore  CMakeLists.txt  README.md  action.yml
.github/workflows/: archivum.yml  ci.yaml
docs/: _config.yml  archivum-context-map.json  archivum-manifest.json  index.md
docs/assets/css/: style.scss
docs/symbols/: include-archivum-api-hpp-DispatchSummary-1ed0f8fafb085122.html  include-archivum-api-hpp-DispatchSummary-1ed0f8fafb085122.md  include-archivum-api-hpp-ProviderRequest-27ec956435e49d66.html  include-archivum-api-hpp-ProviderRequest-27ec956435e49d66.md  include-archivum-config-hpp-ArchivumConfig-769d8c1c99cf55c9.html  include-archivum-docs-hpp-AnalysisReport-5b292f3ad780a47b.html  include-archivum-docs-hpp-AnalysisReport-5b292f3ad780a47b.md  include-archivum-docs-hpp-ContextFile-b3e1d6606d0bebc.html  include-archivum-docs-hpp-ContextMap-f7ea9bda79535b84.html  include-archivum-docs-hpp-ContextSymbol-f7da82ae411d296a.html  include-archivum-docs-hpp-DocumentationWriteResult-feb7db4834b56863.html  include-archivum-docs-hpp-DocumentationWriteResult-feb7db4834b56863.md  include-archivum-docs-hpp-changed_file_count-6b66a3b35ad4c3d8.html  include-archivum-docs-hpp-edge_count-9887ac1d7dea9d32.html  include-archivum-docs-hpp-end_line-da9369758e8049df.html  include-archivum-docs-hpp-graph_edge_count-96de4bd77b54aebb.html  include-archivum-docs-hpp-graph_node_count-6f291f24e853a01a.html  include-archivum-docs-hpp-mutated_count-4dcd5fb9b9ca23cf.html  include-archivum-docs-hpp-source_file_count-1d371a814884025d.html  include-archivum-docs-hpp-start_line-85260842eb7f2df8.html  include-archivum-docs-hpp-symbol_count-a861d13508a9252b.html  include-archivum-git_utils-hpp-FileDiff-f2f35829c2ab853.html  include-archivum-git_utils-hpp-GitScanner-223ad48504a54f78.html  include-archivum-git_utils-hpp-ModifiedRange-900f246ade9f4e6.html  include-archivum-git_utils-hpp-git_commit-8572834da90d6bae.html  include-archivum-git_utils-hpp-git_diff-64e6a9d49a7beafc.html  include-archivum-git_utils-hpp-git_repository-1a700ebda1181dfb.html  include-archivum-git_utils-hpp-operator-605c95dca3e3da2d.html  include-archivum-git_utils-hpp-operator-605c95dca3e3da2d.md  include-archivum-graph-hpp-DependencyGraph-929ff8b4239dae13.html  include-archivum-graph-hpp-DependencyGraph-929ff8b4239dae13.md  include-archivum-graph-hpp-Node-6aedf2954c5cabbc.html  include-archivum-graph-hpp-Node-6aedf2954c5cabbc.md  include-archivum-parser-hpp-ASTParser-563884d35118b706.html  include-archivum-parser-hpp-TSLanguage-616f17e3369c0b68.html  include-archivum-parser-hpp-TSNode-420b200d3e7c5256.html  include-archivum-parser-hpp-TSParser-94d5fb5ff83cf1ad.html  include-archivum-parser-hpp-TSTree-713b0adce1ea6436.html  include-archivum-parser-hpp-operator-d13abcf4ab27f382.html  include-archivum-parser-hpp-operator-d13abcf4ab27f382.md  (+211 more)
include/archivum/: api.hpp  config.hpp  docs.hpp  git_utils.hpp  graph.hpp  parser.hpp
scripts/: run-action.sh  verify.sh
src/: api.cpp  config.cpp  docs.cpp  git_utils.cpp  graph.cpp  main.cpp  parser.cpp
tests/: test_main.cpp
